--- a/client/client.html
+++ b/client/client.html
@@ -35,7 +35,7 @@
 
         const handleResponse = (xhr, parseResponse) => {
             const content = document.querySelector('#content');
-            console.log(xhr);
+            //console.log(xhr);
 
             // Switch for status codes
             switch(xhr.status){
